Fixed the color:white issue on highlighting a search result, and some alignment issues

--- a/app/assets/stylesheets/styles/components/pages/_home.scss
+++ b/app/assets/stylesheets/styles/components/pages/_home.scss
@@ -174,5 +174,17 @@ video { display: block; }
 .guide-count{
   float: right;
   font-weight: bold;
-  line-height: 3.5em;
+  line-height: 3em;
+}
+
+.crop-list-item{
+  font-size: 16px;
+}
+
+.crop-name{
+  padding-left: 1em;
+}
+
+.guide-count{
+  padding-right: 1em;
 }
